--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F2DEBA;
+    background-color: #EAEAEA;
 }
 
 hr {
@@ -7,7 +7,7 @@ hr {
     border-top-style: dotted;
     border-color: #3A8891;
     border-width: 5px;
-    width: 95%;
+    width: 5%;
 }
 
 img {
@@ -15,13 +15,13 @@ img {
 }
 
 h1 {
-    color: #0E5E6F;
+    color: #3C4048;
 }
 
 h2 {
-    color: #3A8891;;
+    color: #00ABB3;;
 }
 
 h3 {
-    color: #3A8891;
+    color: #00ABB3;
 }
